--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <header id="monHeader">
         <div id="head-banner">
-        <a id="logo" href="accueil.html"><img src="images/logo.png" alt="Si je peux me permettre !" id="logo"></a>
+        <a id="logo" href="index.html"><img src="images/logo.png" alt="Si je peux me permettre !" id="logo"></a>
         </div>
     </header>
     <body>
